# chatbotUI

./: .env.example  README.md  app.py  chainlit_fr-FR.md  main.py  pyproject.toml
.chainlit/: config.toml
public/: custom.css
src/chatbotui/: config.py
