[project]
name = "chatbotui"
version = "0.1.0"
description = "General UI for ChatBot"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "chainlit>=2.11.1",
    "litellm>=1.89.4",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
